# aseprite-reader

./: Cargo.toml  README.MD
src/: computed.rs  error.rs  lib.rs  raw.rs
