[package]
name = "aseprite-reader"
authors = ["Neikos <neikos@neikos.email>"]
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.20"
image = { version = "0.23.14", default-features = false }
nom = "6.2.1"
thiserror = "1.0.26"
tracing = "0.1.26"
